# Commons

./: .gitignore  Makefile  README.md
.claude/: launch.json
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: config.py  database.py  main.py  seed.py
backend/app/db/: models.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 3d0c01f2b0a0_add_assets_table.py  ea5c830cfaf5_add_floor_plans_table.py
backend/app/modules/location/: models.py  router.py  service.py  websocket_manager.py
backend/app/modules/map/: models.py  router.py  service.py
backend/tests/: conftest.py
backend/tests/modules/location/: test_locate.py  test_router.py  test_service.py
backend/tests/modules/map/: test_access_points.py  test_router.py  test_zones.py
deploy/: docker-compose.yml
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: FloorMap.tsx
frontend/src/features/map/: CartographerPalette.tsx  CommonsLogo.tsx  CommonsMap.tsx  (+7 more)
frontend/src/lib/: api.ts  hooks.ts  metrics.ts  types.ts
frontend/src/pages/: FloorPlans.tsx
frontend/src/styles/: commons-map.css
scripts/: generate-types.sh
services/analytics/: pyproject.toml
services/analytics/src/: main.py
services/map/: pyproject.toml
services/map/migrations/: env.py
services/map/src/: config.py  database.py  main.py  models.py  schemas.py
services/map/static/: strip_svg_text.py
shared/openapi/: map.yaml
shared/types/: map.d.ts
(+1 files in other folders)
